--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
-  "name": "next-commerce",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "@types/node": "20.4.5",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
-    "postcss": "8.4.27",
+    "@react-native-async-storage/async-storage": "^1.19.1",
+    "@reduxjs/toolkit": "1.9.5",
+    "next": "latest",
+    "next-auth": "^0.0.0-pr.6777.c5550344",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "react-icons": "^4.10.1",
+    "react-redux": "8.1.0",
+    "redux-persist": "^6.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.12",
+    "@types/react-dom": "18.2.5",
+    "@types/react-redux": "^7.1.25",
+    "@types/redux-logger": "3.0.9",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "redux-logger": "3.0.6",
+    "tailwindcss": "^3.3.3",
+    "typescript": "5.1.3"
   }
 }
